Done with user edit/update, index, and destroy actions

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -185,5 +185,11 @@ div.field, div.actions {
   list-style: square;
 }
 
+ul.users {
+  margin_top: 1em;
+}
 
+.users li {
+  list-style: none;
+}
 
